--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,22 @@ html,
 body {
   padding: 0;
   margin: 0;
+  background-color: #030338;
+  color: #3e3eee;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-size: 16px;
+}
+
+*::-webkit-scrollbar {
+  width: 0.7em
+}
+*::-webkit-scrollbar-track {
+  box-shadow: none
+}
+*::-webkit-scrollbar-thumb {
+  background-color: #05219a;
+  outline: none;
 }
 
 a {
